--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
             </nav>
             <button class="button-menu-toggle">Menu</button>
         </div>
+        <main>
+            <div class="greeting">blablabla</div>
         <div class="container">
             <h1>Acerca de</h1>
             <p>¡Bienvenido a nuestra página “Acerca de”! Aquí, aprenderás más sobre nuestra empresa y los servicios que ofrecemos.</p>
@@ -26,5 +28,6 @@
                 <img src="flor3.jpg" alt="Descripción de la imagen 3"/>
             </div>
         </div>
+        </main>
     </body>
 </html>
