--- a/about.html
+++ b/about.html
@@ -18,7 +18,9 @@
             <button class="button-menu-toggle">Menu</button>
         </div>
         <main>
-            <div class="greeting">blablabla</div>
+            <div class="greeting">
+                <p>blablabla</p>
+            </div>
         <div class="container">
             <h1>Acerca de</h1>
             <p>¡Bienvenido a nuestra página “Acerca de”! Aquí, aprenderás más sobre nuestra empresa y los servicios que ofrecemos.</p>
